--- a/src/app/buyers/vendors-list.html
+++ b/src/app/buyers/vendors-list.html
@@ -1,255 +1,6 @@
-<!-- <div class="page-content-inner">
-    <section class="panel panel-with-borders">
-        <div class="panel-heading">
-            <h2>
-                Vendors List
-            </h2>
-        </div>
-        <div class="panel-body">
-            <div class="col-xs-12">
-                <div class="col-xs-3  ">
-                    <div class="form-group row">
-                        <div class="col-md-3">
-                            <label class="form-control-label" for="l0">Search </label>
-                        </div>
-                        <div class="col-md-9">
-                            <input type="text" class="form-control" ng-model="search.name" placeholder="Search keyword" id="l0">
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-xs-2">
-                    <a href="javascript: void(0);" class="pull-right btn btn-primary" ng-click="resetFilters()">Reset</a>
-                </div>
-            </div>
-        </div>
-        <div class="panel-body">
-
-            <div class="table-responsive thead-default margin-bottom-50">
-                <table class="table table-hover">
-                    <thead>
-                        <tr>
-                            <th>S.NO</th>
-                            <th>Name</th>
-                            <th>Email</th>
-                            <th>Mobile Number</th>
-                            <th>Created Date</th>
-                            <th>Action</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr dir-paginate="users in userList   | filter : {firstName:search.name,role:search.role,status:search.status} | itemsPerPage:itemsPerPage"
-                            current-page="currentPage" total-items="totalCount">
-                            <td>{{itemsPerPage *(currentPage-1)+$index+1}}</td>
-                            <td>{{users.firstName}} {{users.lastName}}</td>
-                            <td>{{users.email}}</td>
-                            <td>{{users.mobileNumber}}</td>
-                            <td>{{users.createdAt | date : 'yyyy-MM-dd'}}</td>
-                            <td>
-                                 <button type="button" class="btn btn-rounded btn-secondary-outline margin-inline" data-toggle="modal" data-target="#userData"
-                                    ng-click="userDetails(users);">
-                                    <i class="icmn-pencil5"> </i> View
-                                </button>
-                            </td>
-                        </tr>
-                        <tr ng-show="!(userList   | filter : {firstName:search.name,role:search.role,status:search.status}).length">
-                            <td colspan="10">
-                                <center>No data found</center>
-                            </td>
-
-                        </tr>
-
-                        <tr>
-                            <td colspan="10">
-                                <dir-pagination-controls max-size="5" direction-links="true" boundary-links="true" on-page-change="pageChanged(newPageNumber)"></dir-pagination-controls>
-                            </td>
-
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </section>
-
-</div>
-<div class="modal fade modal-size-large" id="userData" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-                <h4 class="modal-title" id="myModalLabel">User Details</h4>
-            </div>
-            <div class="modal-body">
-                <div class="table-responsive">
-                    <table class="table table-hover">
-                        <colgroup>
-                            <col class="col-xs-4">
-                            <col class="col-xs-8">
-                        </colgroup>
-
-                        <tbody>
-                            <tr>
-                                <td class="text-nowrap">
-                                    Name
-                                </td>
-                                <td>{{modalDetials.firstName}} {{modalDetials.lastName}}</td>
-                            </tr>
-                            <tr>
-                                <td class="text-nowrap">
-                                    Email
-                                </td>
-                                <td>{{modalDetials.email}}</td>
-                            </tr>
-                            <tr>
-                                <td class="text-nowrap">
-                                    Mobile Number
-                                </td>
-                                <td>{{modalDetials.mobileNumber}}</td>
-                            </tr>
-
-                            <tr>
-                                <td class="text-nowrap">
-                                    Role
-                                </td>
-                                <td>
-                                    <span ng-repeat="role in modalDetials.role" class="label label-pill label-default font-size-14 margin-inline">{{role}}</span>
-                                </td>
-                            </tr>
-                            <tr ng-if="!!companyProfile.companyName">
-                                <td>COMPANY PROFILE</td>
-                                <td>
-                                    <table class="table table-inverse">
-
-                                        <tbody>
-                                            <tr>
-                                                <td class="text-nowrap">Company Name </td>
-                                                <td> {{companyProfile.companyName}}</td>
-                                            </tr>
-                                            <tr>
-                                                <td class="text-nowrap">About Company</td>
-                                                <td> {{companyProfile.aboutCompany}}</td>
-                                            </tr>
-                                            <tr>
-                                                <td class="text-nowrap">Addresses</td>
-                                                <td>
-                                                    <table class="table table-inverse">
-
-                                                        <tbody>
-                                                            <tr ng-repeat="address in companyProfile.addressArray   ">
-                                                                <td>{{$index+1}}. {{address.address}}, {{address.city}}, {{address.state}},
-                                                                    {{address.country}}, pincode : </td>
-
-                                                            </tr>
-                                                        </tbody>
-                                                    </table>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td class="text-nowrap">Email Address </td>
-                                                <td> {{companyProfile.email}} </td>
-                                            </tr>
-                                            <tr>
-                                                <td class="text-nowrap">Contact Number</td>
-                                                <td>
-                                                    {{companyProfile.contactNo}}
-                                                </td>
-
-                                            </tr>
-                                            <tr>
-                                                <td class="text-nowrap">
-                                                    Customer Care Number
-                                                </td>
-                                                <td> {{companyProfile.cuscareNo}} </td>
-                                            </tr>
-
-                                        </tbody>
-                                    </table>
-
-                                </td>
-                            </tr>
-                            <tr ng-if="!!legalities.legalities && legalities.legalities.length > 0">
-                                <td>LEGALITIES</td>
-                                <td>
-                                    <table class="table table-inverse">
-                                        <tbody>
-                                            <tr>
-                                                <td class="text-nowrap">Details</td>
-                                                <td>
-                                                    <table class="table table-inverse">
-                                                        <tbody>
-                                                            <tr ng-repeat="row in legalities.legalities">
-                                                                <td>{{row.legaltitle}}</td>
-                                                                <td>{{row.details}}</td>
-
-                                                            </tr>
-                                                        </tbody>
-                                                    </table>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td class="text-nowrap">Image Proofs</td>
-                                                <td>
-                                                    <table class="table table-inverse">
-
-                                                        <tbody>
-                                                            <tr ng-repeat="row in legalities.imageproofs   ">
-                                                                <td colspan="2">
-                                                                    <a href="{{row.oralink}}" target="_blank">
-                                                                        <img ng-src="{{row.link}}" class="messaging-img" alt="{{row.imageName}}">
-                                                                    </a>
-                                                                </td>
-                                                            </tr>
-                                                        </tbody>
-                                                    </table>
-                                                </td>
-                                            </tr>
-
-
-                                        </tbody>
-                                    </table>
-                                </td>
-                            </tr>
-                            <tr ng-if="!!terms.compDetails">
-                                <td>TERMS AND CONDITIONS</td>
-                                <td>
-                                    <table class="table table-inverse">
-
-                                        <tbody>
-                                            <tr>
-                                                <td class="text-nowrap">Terms & Conditions</td>
-                                                <td> {{terms.compDetails}} </td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="text-nowrap">
-                                    PERMISSION
-                                </td>
-                                <td>
-                                    <select class="form-control" name="userStatus" ng-model="modalDetials.access">
-                                        <option value="EVERYONE">EVERYONE</option>
-                                        <option value="AUTHORIZED_ONLY">AUTHORIZED_ONLY</option>
-                                    </select>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" ng-click="saveStatus(modalDetials)">Save changes</button>
-            </div>
-        </div>
-    </div>
-</div> -->
 <div class="page-content-inner">
 
-        <!-- Ecommerce Products List -->
+        <!-- Vendors List -->
         <section class="panel panel-with-borders">
             <div class="panel-heading">
                 <h2>
@@ -275,10 +26,11 @@
                                 <th>S.NO</th>
                                 <th>Name</th>
                                 <th>Email</th>
-                                <th>Mobile Number</th>
-                                <th>Created Date</th>
-                                <th>Admin Approval Status</th>
-                                <th>View Profile</th>
+                                <th>Mobile</th>
+                                <!-- <th>Created Date</th> -->
+                                <th>Admin Status</th>
+                                <th>Profile</th>
+                                <th>Permission</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -288,7 +40,7 @@
                                 <td>{{users.firstName}} {{users.lastName}}</td>
                                 <td>{{users.email}}</td>
                                 <td>{{users.mobileNumber}}</td>
-                                <td>{{users.updatedAt | date : 'yyyy-MM-dd'}}</td>
+                                <!-- <td>{{users.updatedAt | date : 'yyyy-MM-dd'}}</td> -->
                                 <td>
                                     <span ng-if="!!users.profile.adminApprove" class="label {{users.profile.adminApprove == 'APPROVED' ? 'label-success' : ''}} {{users.profile.adminApprove == 'PENDING' ? 'label-danger':''}}"> {{users.profile.adminApprove}}</span>
                                     
@@ -299,6 +51,14 @@
                                     <button  type="button" class="btn btn-rounded btn-secondary-outline margin-inline" data-toggle="modal" data-target="#userData"
                                         ng-click="userDetails(users);">
                                         <i class="icmn-pencil5"> </i> View
+                                    </button>
+                                    
+                                </td>
+                                <td>
+                                    <!--<a href="javascript: void(0);" class="link-underlined margin-right-5"><i class="icmn-pencil5"> </i> View</a>-->
+                                    <button  type="button" class="btn btn-rounded btn-secondary-outline margin-inline" data-toggle="modal" data-target="#permission"
+                                        ng-click="providePermission(users);">
+                                        <i class="icmn-pencil5"> </i> Permissions
                                     </button>
                                     
                                 </td>
@@ -416,6 +176,71 @@
                 <div class="modal-footer">
                     <button type="button" class="btn" data-dismiss="modal">Close</button>
                     <button type="button" class="btn btn-primary" ng-click="saveStatus(companyProfile.userId, companyProfile)">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- modal popup to provide Permissions-->
+    <div class="modal fade modal-size-large" id="permission" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <h4 class="modal-title" id="myModalLabel">Permissions</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="table-responsive">
+                        <table class="table table-hover">
+                            <colgroup>
+                                <col class="col-xs-4">
+                                <col class="col-xs-8">
+                            </colgroup>
+    
+                            <tbody>
+                                <tr>
+                                    <td class="text-nowrap">
+                                        Company Name
+                                    </td>
+                                    <td>{{companyProfile.companyName}}</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-nowrap">
+                                        Created
+                                    </td>
+                                    <td>{{modalDetials.createdAt | date : 'yyyy-MM-dd'}}</td>
+                                </tr>
+                                <tr ng-if="!!subBrands">
+                                    <td class="text-nowrap">
+                                        Sub Brands
+                                    </td>
+                                    <td>
+                                        <select ng-model="companyProfile.subBrand" ng-change="selectSubBrand(companyProfile.subBrand)" ng-options="subBrands as subBrands.name for subBrands in subBrands"
+                                    class="form-control" name="subBrand">
+                                    <option value="" selected>Select</option>
+                                    </select>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="text-nowrap">
+                                        Permission
+                                    </td>
+                                    <td>
+                                        <select class="form-control" name="access" ng-model="access">
+                                            <option value="EVERYONE">EVERYONE</option>
+                                            <option value="AUTHORIZED_ONLY">AUTHORIZED_ONLY</option>
+                                        </select>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" ng-click="updatePermission(companyProfile.userId, access, companyProfile.subBrand)">Save changes</button>
                 </div>
             </div>
         </div>
