--- a/src/assets/common/css/pages/_ecommerce.scss
+++ b/src/assets/common/css/pages/_ecommerce.scss
@@ -1,11 +1,10 @@
-
-
 /*
  * ECOMMERCE
  */
 
 .cui-ecommerce-dashboard-info {
     margin-bottom: 30px;
+
     &__title {
         font-size: 16px;
         font-weight: 700;
@@ -13,9 +12,11 @@
         margin-bottom: 15px;
         margin-top: 10px;
     }
+
     &__description {
         font-size: 24px;
     }
+
     &__block {
         .nav-tabs {
             a {
@@ -25,9 +26,11 @@
             }
         }
     }
+
     &__chart {
         padding-top: 20px;
         margin-bottom: 10px;
+
         &__chart {
             padding-top: 20px;
             margin-bottom: 10px;
@@ -43,6 +46,7 @@
     border-radius: 3px;
     background: $white;
     text-align: center;
+
     img {
         max-width: 100%;
         min-height: 100%;
@@ -58,6 +62,7 @@
         margin-bottom: 35px;
         position: relative;
         background: $white;
+
         &--status {
             position: absolute;
             top: 0px;
@@ -68,6 +73,7 @@
             height: 0px;
             border-color: $danger transparent transparent $danger;
             z-index: 10;
+
             &--title {
                 position: relative;
                 top: -6px;
@@ -80,18 +86,22 @@
                 font-weight: bold;
             }
         }
+
         &--img {
             position: relative;
             text-align: center;
             height: 250px;
+
             a {
                 display: block;
+
                 img {
                     min-height: 250px;
                     max-height: 250px;
                     max-width: 100%;
                     @include transition-very-slow();
                 }
+
                 &:hover {
                     img {
                         transform: scale(1.1);
@@ -99,6 +109,7 @@
                 }
             }
         }
+
         &--title {
             font-size: 16px;
             text-transform: uppercase;
@@ -107,6 +118,7 @@
             padding-top: 15px;
             padding-right: 100px;
             position: relative;
+
             a {
                 display: block;
                 white-space: nowrap;
@@ -114,13 +126,16 @@
                 overflow: hidden;
             }
         }
+
         &--descr {
             padding-right: 100px;
             font-style: italic;
             color: $black-lighten-more-more;
+
             &--sizes {
                 font-style: normal;
                 margin: 15px 0px 10px;
+
                 span {
                     display: inline-block;
                     margin-right: 5px;
@@ -134,18 +149,21 @@
                 }
             }
         }
+
         &--price {
             font-size: 26px;
             position: absolute;
             top: 10px;
             right: 0px;
             text-align: right;
+
             &--old {
                 font-size: 16px;
                 font-weight: normal;
                 text-decoration: line-through;
             }
         }
+
         &--like {
             position: absolute;
             z-index: 100;
@@ -154,24 +172,31 @@
             font-size: 24px;
             cursor: pointer;
             color: $black-lighten-more-more;
+
             &--unliked {
                 display: block;
             }
+
             &--liked {
                 display: none;
             }
-            &:hover, &__selected {
+
+            &:hover,
+            &__selected {
                 .cui-ecommerce--catalog--item--like--unliked {
                     display: none;
                 }
+
                 .cui-ecommerce--catalog--item--like--liked {
                     display: block;
                 }
             }
+
             &__selected {
                 color: $black-lighten-more;
             }
         }
+
         &--img-remove {
             position: absolute;
             z-index: 100;
@@ -186,24 +211,30 @@
         margin-top: 10px;
         color: $black-lighten-more;
     }
+
     &--option {
         margin-bottom: 20px;
+
         &:last-child {
             margin-bottom: 5px;
         }
+
         .cui-ecommerce--catalog--item--descr--sizes {
             margin: 0px;
         }
     }
+
     &--option_title {
         color: $black-lighten-more-more;
         margin-bottom: 10px;
     }
+
     &--price {
         font-size: 31px;
         font-weight: bold;
         margin: 20px 0px;
     }
+
     &--price-before {
         display: inline-block;
         margin-left: 10px;
@@ -214,29 +245,35 @@
         top: -3px;
         font-weight: normal;
     }
+
     &--sku {
         float: right;
         color: $black-lighten-more-more;
         text-align: right;
         margin-top: 3px;
     }
+
     &--rating {
         margin-top: 5px;
         color: $orange;
     }
+
     &--controls {
         .btn {
             padding: 15px 40px !important;
         }
+
         .btn-link {
             margin-top: 3px;
             padding: 15px 15px !important;
         }
     }
+
     &--photos {
         margin-left: -20px;
         margin-top: -15px;
     }
+
     &--photos-item {
         margin-left: 20px;
         width: calc(25% - 20px);
@@ -247,17 +284,21 @@
         overflow: hidden;
         margin-bottom: 20px;
         background: $white;
+
         img {
             width: 70px;
             max-width: 100%;
         }
+
         &__active {
             border-color: $primary;
         }
     }
+
     &--main-title {
         margin-top: 20px;
     }
+
     &--info {
         margin-top: 40px;
     }
@@ -266,17 +307,20 @@
 .cui-ecommerce--cart {
     .content {
         min-height: 100px;
-        > .body {
+
+        >.body {
             width: 100%;
             height: auto;
             padding: 15px;
             position: relative;
         }
     }
+
     .actions {
         padding-top: 30px;
         border-top: 1px solid $gray-darken;
     }
+
     table {
         .text-right {
             input[type=text] {
@@ -294,9 +338,45 @@
             border-color: lighten($black, 9%) !important;
         }
     }
+
     .cui-ecommerce--catalog--item--descr--sizes {
         span {
             border-color: lighten($black, 9%);
         }
+    }
+}
+
+.image-product {
+    position: relative;
+    list-style: none;
+    margin-right: 5px;
+
+    img {
+        width: 100%;
+        border: 1px solid #d6dce0;
+    }
+
+    .remove-product {
+        position: absolute;
+        top: -8px;
+        /* left: 74px; */
+        right: -13px;
+        height: 22px;
+        -webkit-border-radius: 100%;
+        border-radius: 100%;
+        text-align: center;
+        font-size: 16px;
+        color: #000;
+        cursor: pointer;
+        display: block;
+    }
+    .avatar1{
+        width: 84px;
+        height: 37px;
+        background-color: #f2f4f8;
+        /* border-color: #dfe4ed; */
+        display: inline-block;
+        overflow: hidden;
+        border-radius: 0px
     }
 }
