--- a/src/app/index.html
+++ b/src/app/index.html
@@ -235,15 +235,20 @@
                             </a>
                         </li>
                         <li>
+                            <a class="left-menu-link" href="#!/order-history">
+                                Order History
+                            </a>
+                        </li>
+                        <!-- <li>
                             <a class="left-menu-link" href="#!/neworders">
                                 Distributor Orders
                             </a>
-                        </li>
-                        <li>
+                        </li> -->
+                        <!-- <li>
                             <a class="left-menu-link" href="#!/products-prices">
                                 Products Prices Upload
                             </a>
-                        </li>
+                        </li> -->
 
                     </ul>
                 </li>
