--- a/src/app/index.html
+++ b/src/app/index.html
@@ -184,6 +184,12 @@
                         <span class="menu-top-hidden">Orders</span>
                     </a>
                 </li>
+                <li ng-hide="isAdmin">
+                    <a class="left-menu-link" href="#!/order-returns">
+                        <i class="left-menu-link-icon icmn-cart5"> </i>
+                        <span class="menu-top-hidden">Order Returns</span>
+                    </a>
+                </li>
                 <li class="left-menu-list-separator">
 
                 </li>
@@ -237,6 +243,11 @@
                         <li>
                             <a class="left-menu-link" href="#!/order-history">
                                 Order History
+                            </a>
+                        </li>
+                        <li>
+                            <a class="left-menu-link" href="#!/order-returns">
+                                Order Returns
                             </a>
                         </li>
                         <!-- <li>
