--- a/src/app/orders/orders.html
+++ b/src/app/orders/orders.html
@@ -119,6 +119,10 @@
                                                 - {{sales.tax_price*100/(sales.price-sales.tax_price) | number:0}}%
                                                 <span ng-class="sales.status === 'ORDER_APPROVED'? 'text-danger': 'text-success'">
                                                     {{ sales.status === 'ORDER_APPROVED'? 'SHIPMENT PENDING': sales.status.replace("_"," ")}}
+                                                </span> 
+                                                <span ng-show="sales.deliverDate">
+                                                        --
+                                                    <span class="text-primary">Delivered On: {{ sales.deliverDate | date}}</span>
                                                 </span>
                                             </td>
 
@@ -302,11 +306,13 @@
                     <table class="table table-hover">
                         <thead>
                             <tr class="header">
-                                <th>Title</th>
+                                <th><input type="checkbox" style="margin: 2px;width: 15px;" ng-hide="order.sales.length ==1" ng-model="isAllSelected"
+                                    ng-change="toggleAll()">Title</th>
                                 <th>HSN</th>
                                 <th>Batch</th>
                                 <th>Expiry</th>
                                 <th>Quantity</th>
+                                <th ng-show="order.sales[0].ptrFormat">Free</th>
                                 <th>Price</th>
                                 <th>Tax</th>
 
@@ -315,17 +321,19 @@
                         <tbody>
                             <tr ng-repeat="sale in order.sales">
                                 <td>
-                                    <input type="checkbox" ng-hide="order.sales.length ==1" ng-model="sale.selected"
+                                    <input type="checkbox" style="margin: 2px; width: 15px;"ng-hide="order.sales.length ==1" ng-model="sale.selected"
                                         ng-change="stateChanged()">{{sale.title}}
                                 </td>
-                                <td style="min-width: 120px; width: 18%;"><input type="text" class="form-control"
-                                        name="HSN" ng-model="sale.HSNCode"></td>
-                                <td style="min-width: 120px;width: 18%;"><input type="text" class="form-control"
-                                        name="batchName" ng-model="sale.batchName"></td>
-                                <td style="min-width: 120px;width: 18%"><input type="text" class="form-control"
-                                        name="expiry" ng-model="sale.expiryDate"></td>
+                                <td style="min-width: 120px; width: 18%;"><input type="text" class="form-control" name="HSN"
+                                        ng-model="sale.HSNCode"></td>
+                                <td style="min-width: 120px;width: 18%;"><input type="text" class="form-control" name="batchName"
+                                        ng-model="sale.batchName"></td>
+                                <td style="min-width: 120px;width: 18%"><input type="text" class="form-control" name="expiry"
+                                        ng-model="sale.expiryDate"></td>
                                 <td style="width: 20%;"><input type="number" class="form-control" name="quantity"
                                         ng-model="sale.order_quantity"></td>
+                                <td ng-show="sale.ptrFormat" style="width: 20%;"><input type="string" class="form-control" name="free"
+                                        ng-model="sale.free"></td>
                                 <td>{{(sale.price - sale.tax_price) | currency:currency }}</td>
                                 <td>{{sale.tax_price | currency:currency }}
                                     ({{sale.tax_price*100/(sale.price-sale.tax_price) | number:0}}%)
@@ -342,6 +350,8 @@
                     ng-click="splitInvoiceChange()">Split Invoice</button>
                 <button type="button" class="btn btn-primary" ng-hide="splitInvoice"
                     ng-click="updateBatchAndExpiry()">Update</button>
+                    <button type="button" class="btn btn-primary" ng-show="splitInvoice"
+                    ng-click="generateReturnInvoice()">Return Invoice</button>
                 <button type="button" class="btn" data-dismiss="modal">Close</button>
             </div>
         </div>
