--- a/src/app/orders/returnOrders.html
+++ b/src/app/orders/returnOrders.html
@@ -121,6 +121,7 @@
                         <thead>
                             <tr class="header">
                                 <th>Title</th>
+                                <th>MRP</th>
                                 <th>Price</th>
                                 <th>Tax</th>
                                 <th>Quantity</th>
@@ -129,6 +130,7 @@
                         <tbody>
                             <tr ng-repeat="sale in order.sales">
                                 <td>{{sale.title}}</td>
+                                <td>{{sale.MRP}}</td>
                                 <td>{{sale.price | currency:currency }}</td>
                                 <td>{{sale.tax_price | currency:currency }}</td>
                                 <!-- <td style="width: 20%;"><input type="number" class="form-control" name="quantity"
