--- a/src/app/buyers/buyers-list.html
+++ b/src/app/buyers/buyers-list.html
@@ -171,6 +171,14 @@
                             </tr>
                             <tr>
                                 <td class="text-nowrap">
+                                    DISTRIBUTOR PERCENTAGE(%);
+                                </td>
+                                <td>
+                                    <input class="form-control" type="number" name="distPercent" ng-model="companyProfile.distPercent">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="text-nowrap">
                                     Admin Notes
                                 </td>
                                 <td>
